<resources>
    <string name="app_name">WDS</string>
    <string name="last_name">Last name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="password">password</string>
    <string name="location">Location</string>
    <string name="address">  Address Click to fill  </string>
    <string name="zone_no">Zone No.</string>
    <string name="building_no">Building No./House No.</string>
    <string name="build_office_name">Building /Office Name</string>
    <string name="Floor_no">Floor No.</string>
    <string name="Flat_No">Flat no/ Room no.</string>
    <string name="Street_no">Street No.</string>
    <string name="email_id">email-id</string>
    <string name="mobile_no">Mobile.no</string>
    <string name="first_name">First name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver_distribution">DriverDistributionActivity</string>
    <string name="places_api_key">AIzaSyDfryPX4WzD2zaOpUtE5O-CLnZUC3ZLb3U</string>
    <string name="logout">Logout</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="promotion">Zovvo firmly believes that being unique is greater than being the best. And so is our motto when it comes to designing your brand. Life without a touch of spice is slumberous. Well Zovvo adds that spice to your digital being. Our team caters to your brand values and needs with avant-garde logos, collaterals and other merchandise, which boost your brand’s notability to the next level. All marketing strategies involve the four P’s price, product, place and promotion. Zovvo aims to position your brand by carefully evaluating and incorporating the four P’s in its modus operandi. Zovvo ensures that your brand garners the attention that it deserves.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details_one">detailsOneActivity</string>
    <string name="title_activity_customer_profile">CustomerProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="testdetails">Details details details detailsdetailsdetailsdetailsdetailsdetailsdetailsdetailsdetailsdetailsdetails</string>
    <string name="forgotpassword">Enter your registered email_id below and click  on the Password Reset button and we will contact you shortly</string>
    <string name="base_url"></string>
    <string name="update">Update</string>
    <string name="reedem">Minimum points required to redeem ACQU Points is 300...</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="mandatory">As per Qatar Government it is mandatory to provide below details!!..</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="Thankyou">Thankyou for coming to this page Have A Great Shopping</string>

</resources>
