<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rlpopup"
    android:background="@drawable/cornercol"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txt_popupshow"
        android:background="@color/colorbluenavy"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/et_zone"
        android:layout_below="@+id/txt_popupshow"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:hint="@string/zone_no"
        />
    <EditText
        android:id="@+id/et_street"
        android:layout_below="@+id/et_zone"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:textSize="15sp"
        android:hint="@string/Street_no"/>
    <EditText
        android:id="@+id/et_building_no"
        android:layout_below="@+id/et_street"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:textSize="15sp"
        android:hint="@string/building_no"/>
    <EditText
        android:id="@+id/et_building_office_name"
        android:layout_below="@+id/et_building_no"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:textSize="15sp"
        android:hint="@string/build_office_name"/>
    <EditText
        android:id="@+id/et_floor"
        android:layout_below="@+id/et_building_office_name"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:textSize="15sp"
        android:hint="@string/Floor_no"/>
    <EditText
        android:id="@+id/et_flat"
        android:layout_below="@+id/et_floor"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/colorblue"
        android:textColor="@color/colorblue"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/Flat_No"/>
    <Button
        android:id="@+id/btn_reg_sub_pop"
        android:layout_below="@id/et_flat"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Submit"
        android:textColor="@color/colorwhite"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttondesignwhite"/>
</RelativeLayout>