<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waterbackgroundnew"
    android:orientation="horizontal"
    tools:context=".CustomerModule.CustomerAddressActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="106dp"
                android:layout_gravity="left"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:src="@drawable/circlelogo"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colordarkblue"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/tvfname"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorwhite"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/mandatory"
                android:textColor="@color/colorwhite"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:text="Address "
                android:textColor="@color/colorwhite"
                android:textSize="20sp"
                android:textStyle="italic"/>
            <EditText
                android:id="@+id/et_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_border_horizontal_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/zone_no"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_streetview_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Street_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_building_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_account_balance_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/building_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_building_office_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_business_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/build_office_name"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_arrow_drop_down_circle_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Floor_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Flat_No"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <ProgressBar
                android:id="@+id/progressBarAddress"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:visibility="gone" />
            <Button
                android:id="@+id/cus_address_submit"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_bg"
                android:text="submit"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorwhite" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/auth"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>