<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waterbackground_2"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CustomerModule.CustomerProfileActivity"
    tools:showIn="@layout/app_bar_customer_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:selectAllOnFocus="true">
        <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/user"
                            />

                        <Button
                            android:id="@+id/btn_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/profile_image"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/colorwhite"
                            android:background="@drawable/btn_bg"
                            android:text="Edit Photo" />
                </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_update_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/textboxdesign"
                android:drawableStart="@drawable/ic_person_black"
                android:gravity="center"
                android:hint="First Name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/blue_grey" />

            <EditText
                android:id="@+id/et_update_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/textboxdesign"
                android:drawableStart="@drawable/ic_person_black"
                android:gravity="center"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/blue_grey" />
            <EditText
                android:id="@+id/et_update_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="update your email_id"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upzone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_border_horizontal_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/zone_no"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upstreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_streetview_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Street_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upbuilding_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_account_balance_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/building_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upbuilding_office_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_business_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/build_office_name"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upfloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_arrow_drop_down_circle_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Floor_no"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_upflat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:background="@drawable/textboxdesign"
                android:gravity="center"
                android:hint="@string/Flat_No"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/textboxdesignsquareright"
                    android:drawableStart="@drawable/ic_call_black"
                    android:padding="10dp"
                    android:text=" +974 " />

                <EditText
                    android:id="@+id/et_update_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textboxdesignsquare"
                    android:gravity="center"
                    android:hint="Mobile NO."
                    android:inputType="number" />
            </LinearLayout>


        </LinearLayout>


        <!-- <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
             app:ci_drawable="@drawable/circleindicator_round"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             />-->

    </LinearLayout>
</LinearLayout>